[package]
name = "exclude_entry_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
strum = { version = "0.24.1", features = ["derive"] }
