[package]
name = "exclude_entry_compiler"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "KisaragiEffective <kisaragi.effective@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"
